# headlines

./: Cargo.toml  LICENSE  README.org  default.nix
example/: headlines.toml
src/: config_reader.rs  grab_news.rs  main.rs
