[package]
name = "headlines"
description = "Interactively view the latest headlines in your terminal with rust"
version = "0.2.1"
edition = "2021"

[dependencies]
toml = "0.8.19"
chrono = "0.4.38"
crossterm = "0.28.1"
newsapi = "0.6.0"
ratatui = "0.28.1"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
